--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,101 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body {
+  font-family: "Raleway", serif;
+  font-size: 1.6rem !important;
+  position: relative;
+  line-height: 1.6;
+}
+
+.navbar {
+  transition: all 0.8s ease;
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  font-size: 1.9rem;
+}
+
+.navbar .nav-link {
+  position: relative;
+  color: #fff !important;
+ 
+}
+
+.navbar-nav .nav-link::after {
+  content: ""; /* Pusty content - tworzymy element */
+  position: absolute; /* Absolutne pozycjonowanie */
+  left: 0; /* Ustawienie od lewej krawędzi */
+  bottom: 0; /* Ustawienie od dolnej krawędzi */
+  width: 0; /* Początkowa szerokość 0 (niewidoczna) */
+  height: 5px; /* Wysokość linii */
+  background-color: #cd5ff8; /* Kolor linii */
+  border-radius: 16px;
+  transition:  all .3s ease-out 0s; /* Animacja zmiany szerokości */
+}
+
+.navbar-nav .nav-link:hover::after {
+  width: 100%; /* Po najechaniu linia rozciąga się na całą szerokość linku */
+}
+
+.navbar-dark a.navbar-brand {
+  font-size: 3rem;
+  color: #cd5ff8;
+  font-weight: bold;
+}
+.navbar-dark a.navbar-brand:hover {
+  color: #cd5ff8;
+}
+
+.navbar .nav-item {
+  margin-left: 20px;
+}
+
+.home-section {
+  height: 500px;
+  background-image: linear-gradient(
+      to bottom left,
+      hsla(0, 3%, 6%, 0.678),
+      rgba(12, 10, 22, 0.863)
+    ),
+    url(../../public/home-bg.dc52d5d40a40b13154b0.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  position: relative;
+  z-index: -1;
+}
+
+.home-about-section {
+  height: 500px;
+  background-image: linear-gradient(
+      to bottom left,
+      hsla(0, 3%, 6%, 0.678),
+      rgba(12, 10, 22, 0.863)
+    ),
+    url(../../public/home-bg.dc52d5d40a40b13154b0.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.sticky {
+  backdrop-filter: blur(15px) !important;
+  background-color: #1b1a2ea9 !important;
+  box-shadow: 0 10px 10px 0 rgba(9, 5, 29, 0.171) !important;
+}
+
+@media (min-width: 992px) {
+ 
 }
