--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,10 @@ body {
   scrollbar-width: thin;
 }
 
+ul {
+  list-style: none;
+}
+
 /* Nawigacja */
 .navbar {
   background-color: #181a27;
@@ -251,10 +255,8 @@ body {
 }
 
 .home-about-section {
-  height: 500px;
-
-  padding-bottom: 30px;
-  padding-top: 30px;
+  padding-bottom: 70px;
+  padding-top: 70px;
 }
 
 .home-about-section h2 {
@@ -264,12 +266,22 @@ body {
 }
 
 .home-about-description {
- margin-top: 50px;
+  padding-top: 100px;
+  margin-bottom: 20px;
 }
 
-.home-about-description p {
-font-size: 1.9rem;
-margin-bottom: 20px;
+.home-about-body {
+  padding-top: 50px;
+  font-size: 1.9rem;
+  margin-bottom: 20px;
+}
+
+.myAvatar {
+  padding-block: 100px;
+}
+
+.home-about-social h2 {
+  font-size: 3.1rem;
 }
 
 @media (max-width: 767px) {
