--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@ body {
 
 ul {
   list-style: none;
-  padding: 0 !important;
+  padding: 0;
 }
 
 /* Nawigacja */
@@ -349,6 +349,27 @@ ul {
   color: #ffffff;
 }
 
+.tech-icons {
+  border: 1.7px solid rgba(200, 137, 230, 0.637);
+  border-radius: 5px;
+  box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137);
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  font-size: 4.5em;
+  transition: all 0.4s ease 0s;
+}
+
+.tech-icons:hover {
+  border: 2.2px solid rgba(197, 115, 230, 0.883);
+  overflow: hidden;
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.tech-icons svg {
+  font-size: 7.2rem;
+}
 @media (max-width: 767px) {
   /* Dotyczy ekranów mniejszych niż 992px */
   .navbar-collapse {
@@ -385,6 +406,10 @@ ul {
 
   .typewriter-container {
     font-size: 2.2rem;
+  }
+
+  .tech-icons {
+    margin: 15px;
   }
 }
 
