Feature/About - change color icon of fill on white

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -369,6 +369,7 @@ ul {
 
 .tech-icons svg {
   font-size: 7.2rem;
+  fill: white;
 }
 @media (max-width: 767px) {
   /* Dotyczy ekranów mniejszych niż 992px */
