Feature/About - created section days code and hurra - graphql is my first use and its fine and graphql help me fetch all data with github api in one query

--- a/src/app/(pages)/about/about.module.css
+++ b/src/app/(pages)/about/about.module.css
@@ -37,6 +37,10 @@
     text-align: center;
 }
 
+.coding {
+  max-width: 100%;
+  height: auto;
+}
 @media (max-width: 767px) {
   .cardView,
   .cardImage {
