--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -237,21 +237,21 @@ ul {
   font-size: 1.4rem;
   font-family: "Raleway", serif;
   font-weight: bolder;
-  white-space: nowrap; /* Utrzymanie tekstu w jednej linii */
+  white-space: nowrap;
   color: #cd5ff8;
   padding: 50px;
 }
 
 .typewriter-text {
   display: inline-block;
-  border-right: 2px solid #cd5ff8; /* Stylizowanie kropki (caret) */
+  border-right: 2px solid #cd5ff8;
   padding-right: 5px;
-  animation: blink 0.5s step-end infinite; /* Migający caret */
+  animation: blink 0.5s step-end infinite;
 }
 
 @keyframes blink {
   50% {
-    border-color: transparent; /* Miganie caret */
+    border-color: transparent;
   }
 }
 
@@ -282,7 +282,7 @@ ul {
 }
 /**/
 .avatar-container {
-  perspective: 1500px; /* Zwiększ perspektywę dla lepszego efektu 3D */
+  perspective: 1500px;
   display: inline-block;
   transition: transform 0.3s ease;
 }
@@ -372,44 +372,64 @@ ul {
   fill: white;
 }
 
-.calendar {
+/*Kalendarz */
+.activity-calendar-container {
+  display: flex;
+  justify-content: center;
+  overflow-x: auto;
   max-width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-
-  background-color: transparent;
+}
+.react-activity-calendar {
+  align-items: center;
 }
 
+.react-activity-calendar__footer {
+  gap: 0 !important;
+  justify-content: space-between !important;
 
+  width: 100%;
+}
 
+.activity-calendar-container > div {
+  width: 100%;
+}
+
+.react-activity-calendar .react-activity-calendar__legend-month {
+  font-size: 1.2rem;
+}
+
+@media (min-width: 480px) {
+  .activity-calendar-container > div {
+    block-size: 12px !important;
+  }
+}
 
 @media (max-width: 767px) {
-  /* Dotyczy ekranów mniejszych niż 992px */
   .navbar-collapse {
-    text-align: center; /* Wyrównanie do środka */
+    text-align: center;
   }
 
   .navbar-nav {
-    flex-direction: column; /* Ustawienie linków w kolumnie */
-    align-items: center; /* Centrowanie linków */
-    gap: 1rem; /* Opcjonalne odstępy między linkami */
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
   }
 
   .nav-link {
-    padding: 1rem 1.6rem !important; /* Dostosowanie paddingu dla lepszej czytelności */
+    padding: 1rem 1.6rem !important;
   }
 }
 
 @media (min-width: 768px) {
   .navbar {
     background-color: transparent;
-    transition: background-color 0.3s ease-in-out; /* Płynna zmiana tła */
+    transition: background-color 0.3s ease-in-out;
   }
 
   .navbar.sticky {
     backdrop-filter: blur(15px) !important;
     background-color: #1b1a2ea9 !important;
-    box-shadow: 0 10px 10px 0 rgba(9, 5, 29, 0.171) !important; /* Zmiana koloru tła na ciemne po przewinięciu */
+    box-shadow: 0 10px 10px 0 rgba(9, 5, 29, 0.171) !important;
   }
 
   .navbar .nav-link,
@@ -423,6 +443,10 @@ ul {
 
   .tech-icons {
     margin: 15px;
+  }
+
+  .react-activity-calendar .react-activity-calendar__legend-month {
+    font-size: 1.8rem;
   }
 }
 
