--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,6 +155,12 @@ ul {
   margin-left: 32px;
 }
 
+.nav-link {
+  white-space: nowrap;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center;
+}
 .nav-item i {
   margin-right: 5px;
 }
@@ -452,6 +458,27 @@ ul {
   left: 0;
 }
 
+.resume-img {
+  max-width: 500px;
+}
+
+.button button {
+  font-size: 1.6rem;
+  line-height: 1.5px;
+  padding: 12px 12px;
+
+  background-color: #623686;
+  border-radius: 0.25rem;
+  color: #fff;
+  width: 250px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+}
+
+.button button:hover {
+  background-color: #6d20c5d7;
+  color: #fff;
+}
+
 @media (min-width: 480px) {
   .activity-calendar-container > div {
     block-size: 12px !important;
@@ -504,6 +531,11 @@ ul {
   }
 }
 
+@media (min-width: 1000px) {
+  .nav-link {
+    display: block !important;
+  }
+}
 @media (min-width: 1200px) {
   .home-about-social h2 {
     font-size: 4rem;
