--- a/src/app/(pages)/resume/resume.module.css
+++ b/src/app/(pages)/resume/resume.module.css
@@ -1,13 +1,16 @@
 .resumeSection {
-    padding-top: 110px;
-    padding-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  padding-top: 110px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  .resume {
-    
-    padding-block: 50px;
-  }
+.resume {
+  padding-block: 50px;
+}
+
+.imageWrapper {
+  max-width: 500px;
+}
