--- a/src/app/components/Home/AboutSection/AboutSection.module.css
+++ b/src/app/components/Home/AboutSection/AboutSection.module.css
@@ -40,6 +40,11 @@
 .socialLinks {
   padding-top: 25px;
 }
+.socialLinks {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.5s ease-out;
+}
 
 .socialLinks h2 {
   font-size: 3.1rem;
@@ -79,3 +84,4 @@
     font-size: 4rem;
   }
 }
+
