--- a/src/app/components/Home/Header/Header.module.css
+++ b/src/app/components/Home/Header/Header.module.css
@@ -4,7 +4,7 @@
     hsla(0, 3%, 6%, 0.678),
     rgba(12, 10, 22, 0.863)
   ),
-  url(/public/home-bg.webp); /* 🔥 WebP – nowoczesne przeglądarki */
+  url(/home-bg.webp); /* 🔥 WebP – nowoczesne przeglądarki */
   background-position: top;
   background-repeat: no-repeat;
 
@@ -15,14 +15,14 @@
 }
 
 /* Fallback dla starszych przeglądarek */
-@supports not (background-image: url(/public/home-bg.webp)) {
+@supports not (background-image: url(/home-bg.webp)) {
   .homeSection {
     background-image: linear-gradient(
         to bottom left,
         hsla(0, 3%, 6%, 0.678),
         rgba(12, 10, 22, 0.863)
       ),
-      url(/public/home-bg.jpg); /* 🛑 JPG dla przeglądarek bez WebP */
+      url(/home-bg.jpg); /* 🛑 JPG dla przeglądarek bez WebP */
   }
 }
 
